[package]
name = "mio-v2"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "client-with-retry"
path = "src/bin/client-with-retry.rs"

[dependencies]
mio = { version = "1", features = ["os-poll", "net"] }
